--- a/deploy/grafana-datasources.yaml
+++ b/deploy/grafana-datasources.yaml
@@ -5,3 +5,8 @@ datasources:
     type: prometheus
     uid: prometheus
     url: http://prometheus:9090
+
+  - name: Tempo
+    type: tempo
+    uid: tempo
+    url: http://tempo:3200
